js/js.translator/testData/incremental/invalidation/addUpdateRemoveDependentFile/lib1/l1a.0.kt
fun foo0() = 42

fun foo0_1() = 78
